Cache JCSMPSessions and provide them as Bean to avoid multiple connections to the same broker.
## [4.2.3] - 2024-07-19
### Added
- Cache JCSMPSessions and provide them as Bean to avoid multiple connections to the same broker.
- Add .editorconfig and reformat the whole code.

### Changed
- Bump versions of solace jcsmp to 10.24.1
- Use only Slf4j to log.